--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
+APP_NAME=DentalCare
 APP_ENV=production
 APP_KEY=base64:nwhJ1ZzSz0Wla3tyuBzwfhqvGwxyhdCLFSPvoVlnQak=
-APP_URL=https://dentalcare-1-vh7p.onrender.com
+APP_URL=https://dentalcaresystem-6lbt.onrender.com
 APP_DEBUG=false
 
 # -----------------------------------------------------------------
@@ -23,11 +23,11 @@ LOG_LEVEL=debug
 # BASE DE DATOS (PostgreSQL)
 # -----------------------------------------------------------------
 DB_CONNECTION=pgsql
-DB_HOST=dpg-d3t9ibmmcj7s73e7ht7g-a.oregon-postgres.render.com
+DB_HOST=dpg-d4etebbgk3sc73bv84ig-a.oregon-postgres.render.com
 DB_PORT=5432
-DB_DATABASE=dentalcare_j8np
-DB_USERNAME=dentaluser
-DB_PASSWORD=IYVbsWcuUuRtrm3aiaYYAyYVXLlmGQbH
+DB_DATABASE=dentalcarecx
+DB_USERNAME=user_dcx
+DB_PASSWORD=FIi0yFycF5IuTc0TSc0GjBZCeMAprVq8
 
 # -----------------------------------------------------------------
 # CACHE Y COLAS (Drivers recomendados para Docker)
