--- a/.env
+++ b/.env
@@ -29,6 +29,8 @@ DB_DATABASE=dentalcarecx
 DB_USERNAME=user_dcx
 DB_PASSWORD=FIi0yFycF5IuTc0TSc0GjBZCeMAprVq8
 
+GOOGLE_DRIVE_FOLDER_ID=14TaS42svjlWVzQNwa-mdcyOtWRnqyDz6
+
 # -----------------------------------------------------------------
 # CACHE Y COLAS (Drivers recomendados para Docker)
 # -----------------------------------------------------------------
