--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
+    
 }
